--- a/transactions.ui
+++ b/transactions.ui
@@ -28,7 +28,14 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="0" colspan="2">
+   <item row="0" column="2">
+    <widget class="QPushButton" name="update_pushButton">
+     <property name="text">
+      <string>Update</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="3">
     <widget class="QTableView" name="transactions_tableView"/>
    </item>
   </layout>
